--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -4,104 +4,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="dataModel"
-            type="com.app.exovideolist.data.models.MediaObject"/>
+            type="com.app.exovideolist.data.models.MediaObject" />
 
         <variable
             name="callback"
-            type="com.app.exovideolist.utils.PlayerStateCallback"/>
+            type="com.app.exovideolist.utils.PlayerStateCallback" />
 
         <variable
             name="index"
-            type="int"/>
+            type="int" />
 
 
     </data>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:weightSum="100"
-        android:id="@+id/parent"
-        android:layout_marginBottom="16dp"
-        android:background="#fff">
+        android:layout_margin="10dp"
+        android:translationZ="2dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="2dp">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="#000" />
-
-        <TextView
-            android:id="@+id/title"
+        <LinearLayout
+            android:id="@+id/parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="16dp"
+            android:background="#fff"
+            android:orientation="vertical"
+            android:weightSum="100">
 
-            android:textStyle="bold"
-            android:text="@{dataModel.title}"
-            android:textColor="#000"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/subTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="15dp"
-            android:padding="10dp"
-            android:text="@{dataModel.subtitle}"
-            android:textColor="#000"
-            android:textSize="15sp" />
-
-        <FrameLayout
-            android:id="@+id/media_container"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:background="#000"
-            android:scaleType="center">
-
-            <com.google.android.exoplayer2.ui.PlayerView
-                app:surface_type="texture_view"
-                android:id="@+id/item_video_exoplayer"
+            <TextView
+                android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:resize_mode="fill"
-                app:video_url="@{dataModel.mediaUrl}"
-                app:on_state_change="@{callback}"
-                app:progressbar="@{progressBar}"
-                app:thumbnail="@{thumbnail}"
-                app:item_index="@{index}"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-            <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="#fff"
-                android:scaleType="centerCrop"
-                app:thumbnail="@{dataModel.thumbnail}" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="gone" />
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="@{dataModel.title}"
+                android:textColor="#000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/subTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="15dp"
+                android:text="@{dataModel.subtitle}"
+                android:textColor="#000"
+                android:textSize="15sp" />
+
+            <FrameLayout
+                android:id="@+id/media_container"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:background="#000"
+                android:scaleType="center">
+
+                <com.google.android.exoplayer2.ui.PlayerView
+                    android:id="@+id/item_video_exoplayer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:item_index="@{index}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:on_state_change="@{callback}"
+                    app:progressbar="@{progressBar}"
+                    app:resize_mode="fill"
+                    app:surface_type="texture_view"
+                    app:thumbnail="@{thumbnail}"
+                    app:video_url="@{dataModel.mediaUrl}" />
+
+                <ImageView
+                    android:id="@+id/thumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:background="#fff"
+                    android:scaleType="centerCrop"
+                    app:thumbnail="@{dataModel.thumbnail}" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
 
 
-        </FrameLayout>
+            </FrameLayout>
 
 
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
 
 
