--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -28,7 +28,7 @@
         app:cardCornerRadius="5dp"
         app:cardElevation="2dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,6 +46,7 @@
                 android:text="@{dataModel.title}"
                 android:textColor="#000"
                 android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:textStyle="bold" />
 
             <TextView
@@ -56,6 +57,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="15dp"
                 android:text="@{dataModel.subtitle}"
+                app:layout_constraintTop_toBottomOf="@id/title"
                 android:textColor="#000"
                 android:textSize="15sp" />
 
@@ -64,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
                 android:background="#000"
+                app:layout_constraintTop_toBottomOf="@id/subTitle"
                 android:scaleType="center">
 
                 <com.google.android.exoplayer2.ui.PlayerView
@@ -80,6 +83,8 @@
                     app:resize_mode="fill"
                     app:surface_type="texture_view"
                     app:thumbnail="@{thumbnail}"
+                    app:view="@{view}"
+                    app:thumb_url="@{dataModel.thumbnail}"
                     app:video_url="@{dataModel.mediaUrl}" />
 
                 <ImageView
@@ -102,8 +107,16 @@
 
             </FrameLayout>
 
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
 
-        </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
 
